--- a/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/XP/looknfeel/default/css/BonitaConsoleExt.css
+++ b/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/XP/looknfeel/default/css/BonitaConsoleExt.css
@@ -1,6 +1,7 @@
 /* */
 .bos_admin_mode .unified_panels {
 	margin-right: inherit;	
+	background: #F0F0F0;
 }
 
 /* */
@@ -153,6 +154,7 @@
 }
 /* Privilege mgmt (End) */
 /* Remote deployment (Begin) */
+
 .disabled_settings_element_label {
 	color: #B1B5BE;
 }
@@ -167,6 +169,7 @@
 }
 /* Remote deployment (End) */
 /* Item list editor (Begin) */
+
 .bos_groups_list_editor{
 	width: 100%;
 }
@@ -182,27 +185,32 @@
 .bos_roles_list_editor{
 	width: 100%;
 }
+
 /* Item list editor (End) */
 /* Item filter editor (Begin) */
+
 .bos_item_filter_editor_col_wrapper {
-	background-color:#F5F5F5;
-	border:1px solid lightgray;
-	clear:both;
-	float:left;
+	background-color: #F5F5F5;
+    border: 1px solid lightgray;
+	clear: both;
+	float: left;
 	margin: auto auto auto 1%;
-	padding:0;
-	width:98%;
+	padding: 0;
+	width: 98%;
 }
+
 .bos_filter_element_column_1 {
-	float:left;
-	padding-left:50px;
-	padding-top:5px;
+	float: left;
+	padding-left: 50px;
+	padding-top: 5px;
 }
+
 .bos_filter_element_column_2 {
 	float:left;
 	padding-left:50px;
 	padding-top:5px;
 }
+
 .bos_item_filter_editor-open {
 	clear: both;
 	float: none;
@@ -221,29 +229,36 @@
 .bos_item_filter_editor-open .bos_item_filter_editor_content {
 	float: none;
 }
+
 .bos_item_filter_editor-open .bos_item_filter_editor_page_browser {
 	float: right;
 }
+
 .bos_item_filter_editor-open .bos_item_filter_editor_content .b-MenuBar {
 	clear: both; 
 	margin-left: 42%;
 }
+
 .bos_item_filter_editor-open .bos_item_filter_editor_content .bos_filter_element_column_1 .b-MenuBar, .bos_item_filter_editor-open .bos_item_filter_editor_content .bos_filter_element_column_2 .b-MenuBar{
 	clear: none; 
 	margin-left: 0;
 }
+
 .bos_item_filter_editor-open .bos_filter_element_title {
 	font-weight: bold;
 	padding: 5px;
 }
+
 .bos_filter_element .bos_item_viewer {
 	float: left;
 	padding-left: 7px;
 }
+
 .bos_filter_element_wrapper {
 	padding-left: 7px;
 	float: left;
 }
+
 .bos_filter_element_wrapper .gwt-Label {
 	font-weight: normal;
 	float: left;
@@ -261,11 +276,14 @@
 .bos_item_filter_editor-open .bos_filter_element .bos_item_filter_history {
 	margin-top: 5px;
 }
+
 /*Item filter editor (End) */
 /** Rule filter editor (Begin) */
+
 .bos_rule_filter_editor_ruletype_selector {
 	margin-top: 3px;
 }
+
 .bos_rule_filter_editor_ruletype_selector .gwt-Label {
 	float: left;
 }
@@ -273,11 +291,14 @@
 .bos_rule_filter_editor_ruletype_selector .gwt-ListBox {
 	float: left;
 }
+
 /** Rule filter editor (End) */
 /** Report editor (Begin) */
+
 .bos_report_editor_panel {
 	
 }
+
 .bos_report_editor {
 	width: 540px;
 	margin: auto;
@@ -307,9 +328,11 @@
 .bos_report_definition_editor .bos_file_upload_editor .field_edit {
 	float: left;
 }
+
 .bos_report_definition_editor .bos_file_upload_editor .field_view {
 	float: left;
 }
+
 .bos_report_definition_editor .bos_file_upload_editor .empty_field {
 	text-decoration: underline;
 	cursor: pointer;
@@ -381,29 +404,38 @@
 
 /**  Report editor (End)  */
 /** Remote deployment (Begin) */
+
 .bos_remoteDeployment_panel table {
 	margin: auto;
 }
+
 /** */
 /** Reports list (Begin) */
+
 .bos_report_deploy .bos_report_definition_editor {
 	width: 100%;
 }
+
 /** Reports list (End) */
 /** Documents list (End) */
+
 .bos_documents_list_editor {
 	padding-left: 10px;
 	padding-right: 10px;
 	width: 100%;
 }
+
 .bos_documents_list_editor .item_list{
 	border: solid lightgrey 1px;
 }
+
 .bos_caseid_document_column {
 	width: 100%;
 }
+
 /** Documents list (End) */
 /** Document editor (Begin) */
+
 .bos_document_editor {
 	width: 100%;
 }
@@ -411,29 +443,37 @@
 	display: inline;
 	margin-right: 5px;
 }
+
 /** Document editor (End) */
 /** Case editor (Begin) */
+
 .bos_attachment_panel .bos_title_text {
 	display: inline;
 	margin-right: 5px;
 }
+
 /** Case editor (End) */
 
 /* Monitoring (Begin) */
+
 .bos_monitoring_panel {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 15px;
 }
+
 .bos_jvm_monitoring_graph {
 	float:left;
 }
+
 .bos_jvm_monitoring_graph_title{
 	font-weight: bold;
 }
+
 .bos_jvm_monitoring_label {
 	align:right;
 }
+
 .bos_monitoring_help{
 	margin-left:3px;
 }
@@ -441,17 +481,21 @@
 .bos_processes_monitoring_graph {
 	float:left;
 }
+
 .bos_processes_monitoring_label {
 	align:right;
 }
+
 .bos_processes_monitoring_help{
 	margin-left:3px;
 }
+
 .bos_main_fieldset_chart{		 	
 	margin:20px;
   	margin-right: auto;
 	margin-left: auto;	
 }
+
 .bos_fieldset_chart{
 	background: #ECEDF0;
 	margin: 10px;
@@ -463,16 +507,20 @@
   	margin-right: auto;
 	margin-left: auto;
 }
+
 .bos_monitoring_grid{
 	/* width: 1000px; */
 }
+
 .bos_monitoring_grid_title{
 	text-align: center;
 	font-size: 18px;
 }
+
 .bos_monitoring_grid td{
 	width: 150px;
 }
+
 .bos_monitoring_system_properties_grid_name{
 	text-align:left;
 	font-weight:bold;
@@ -481,34 +529,43 @@
 	word-wrap: break-word;
 	padding:5px;
 }
+
 .bos_monitoring_system_properties_grid_value{
 	word-wrap: break-word;
 	padding:5px;
 	width: 100%;
 }
+
 .bos_monitoring_system_properties_grid{
 	table-layout: fixed;
 }
+
 .bos_monitoring_grid_background-even{
 	background-color:#E9E9E9;
 }
+
 .bos_monitoring_grid_value_column_size{
 	width: 100%;
 }
+
 .bos_monitoring_scroll_panel{
 	margin-bottom:20px;
 }
+
 .bos_monitoring_grid_row{
 	padding:5px;
 }
+
 .bos_monitoring_chart{
 	margin-top: 40px
 }
+
 .bos_monitoring_info{
 	font-weight:bold;
   	margin-right: auto;
 	margin-left: auto;	
 }
+
 /* Monitoring (End) */
 
 .bos_licence_grid_title{
